--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: post-index
-title: Latest Posts
-description: "Describe this nonsense."
+title: A blog for coolest 404 pages on the web.
+description: "A blog for coolest 404 pages on the web."
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 image:
   feature: abstract-1.jpg
-  credit: dargadgetz
-  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+  credit:
+  creditlink:
 ---
 
 {% for post in paginator.posts %}
